force-app/main/default/objects/Checklist__c/Checklist__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Checklist</label>
    <nameField>
        <displayFormat>Checklist-{0000}</displayFormat>
        <label>Checklist #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>