force-app/main/default/objects/Checklist__c/fields/ASI__c.field-meta.xml
<CustomField>
    <fullName>ASI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASI</label>
    <type>Checkbox</type>
</CustomField>