force-app/main/default/objects/Checklist__c/fields/Cal_OMS__c.field-meta.xml
<CustomField>
    <fullName>Cal_OMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cal-OMS</label>
    <type>Checkbox</type>
</CustomField>