force-app/main/default/objects/Checklist__c/fields/Followup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Followup_Notes__c</fullName>
    <label>Followup Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>